--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "node ./node_modules/.bin/jest",
     "test-with-coverage": "node ./node_modules/.bin/jest --coverage && cat ./coverage/lcov.info | node ./node_modules/.bin/codacy-coverage",
-    "transpile": "node ./node_modules/.bin/babel src --out-dir dist"
+    "transpile": "node ./node_modules/.bin/babel src --out-dir dist",
+    "lint": "yarn eslint src"
   },
   "keywords": [
     "addition"
@@ -23,6 +24,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "codacy-coverage": "^2.1.0",
+    "eslint": "^5.3.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "jest": "^23.0.0-alpha.0"
   }
 }
